hoan thien chuc nang v2

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,3 +69,32 @@ input[type="range"]::-ms-thumb{
 input[type="range"]::-ms-thumb:active{
     border: solid 1px #8fcce4;
 }
+
+button.slick-arrow::before {
+    font-size: 40px !important;
+    color: #cfde62 !important;
+}
+
+.slick-next {
+    right: 33px !important;
+    top: 45% !important;
+}
+
+.slick-prev {
+    left: 10px !important;
+    z-index: 10 !important;
+    top: 45% !important;
+}
+
+@keyframes slide-right {
+    0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+
+    100% {
+        -webkit-transform: translateX(100px);
+        transform: translateX(100px);
+    }
+    
+    }
